Workbench doesn't respect GP simplify options when rendering #91448

Closed
opened 2021-09-16 10:08:02 +07:00 by Ivan Cappiello · 11 comments

System Information
Operating system: macOS-11.5.2-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 555 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20

Blender Version
Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: 1b8d33b18c
Worked: N.A.

Short description of error
When using Grease Pencil Simplify options like disabling fill, workbench engine acts correctly in viewport but ignores simplify option when rendering image.

Exact steps for others to reproduce the error
open the attached blend file and go to Render>Render Image

GP_simplify_WB_view.png
GP_Simplify_WB_render.png

GP_workBench.blend

**System Information** Operating system: macOS-11.5.2-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 555 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20 **Blender Version** Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: `1b8d33b18c` Worked: N.A. **Short description of error** When using Grease Pencil Simplify options like disabling fill, workbench engine acts correctly in viewport but ignores simplify option when rendering image. **Exact steps for others to reproduce the error** open the attached blend file and go to Render>Render Image ![GP_simplify_WB_view.png](https://archive.blender.org/developer/F10426548/GP_simplify_WB_view.png) ![GP_Simplify_WB_render.png](https://archive.blender.org/developer/F10426550/GP_Simplify_WB_render.png) [GP_workBench.blend](https://archive.blender.org/developer/F10426540/GP_workBench.blend)

Added subscriber: @icappiello

Added subscriber: @icappiello

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

Added subscriber: @antoniov

Added subscriber: @antoniov

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

The simplify options are only for Viewport, but are not used in Render..it's the same if you use Eevee or Workbench.

Edit: I mean, Fill option...maybe we need clarify in the tooltip what does each option.

The simplify options are only for Viewport, but are not used in Render..it's the same if you use Eevee or Workbench. Edit: I mean, Fill option...maybe we need clarify in the tooltip what does each option.

In #91448#1220919, @antoniov wrote:
The simplify options are only for Viewport, but are not used in Render..it's the same if you use Eevee or Workbench.

Edit: I mean, Fill option...maybe we need clarify in the tooltip what does each option.

oh... that's odd. Regular simplify always used to work both in viewport and render, even before render had a separate flag.
Btw would be nice to have an option to disable GP in render for compositing purposes and since GP is not really affected by switching to workbench at all.

> In #91448#1220919, @antoniov wrote: > The simplify options are only for Viewport, but are not used in Render..it's the same if you use Eevee or Workbench. > > Edit: I mean, Fill option...maybe we need clarify in the tooltip what does each option. oh... that's odd. Regular simplify always used to work both in viewport and render, even before render had a separate flag. Btw would be nice to have an option to disable GP in render for compositing purposes and since GP is not really affected by switching to workbench at all.

UI is confusing. It is not clear if the simplify is a global or a viewport/render specific option. I would say that it is a global setting as it isn't located inside the viewport/render panel.

We should first come up with a clear UI, than we can adjust the render engines to it. @antoniov would that be something you could clarify?

UI is confusing. It is not clear if the simplify is a global or a viewport/render specific option. I would say that it is a global setting as it isn't located inside the viewport/render panel. We should first come up with a clear UI, than we can adjust the render engines to it. @antoniov would that be something you could clarify?

I will try to see if I can use same settings fro Viewport and Render.

I will try to see if I can use same settings fro Viewport and Render.
Antonio Vazquez self-assigned this 2021-09-17 09:55:46 +07:00

This issue was referenced by 8235d4dea6

This issue was referenced by 8235d4dea677b86804bd81bfc44a69b08ab4013c

This issue was referenced by 1cd20b0026

This issue was referenced by 1cd20b0026838c3fb69c0b273db8513f89f31f22

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91448
There is no content yet.