Fix T91448: GPencil Fill simplify not working in render

The simplify was hardcode to be disabled in render.